--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter_tts: ^3.8.5
   speech_to_text: ^6.6.0
+  table_calendar: ^3.1.3
+  intl: ^0.19.0
+
+
   flutter:
     sdk: flutter
 
