--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   table_calendar: ^3.1.3
   intl: ^0.19.0
   percent_indicator: ^4.2.3
-
+  avatar_glow: ^2.0.2
 
 
   flutter:
@@ -57,6 +57,11 @@ dependencies:
   dash_chat_2: ^0.0.21
   flutter_gemini: ^3.0.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -68,6 +73,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
+  flutter_launcher_icons: ^0.11.0
 
 
 # For information on the generic Dart part of this file, see the
@@ -85,6 +91,7 @@ flutter:
   assets:
     - assets/images/
     - assets/animations/
+    - assets/animations2/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
