--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   intl: ^0.19.0
   percent_indicator: ^4.2.3
   avatar_glow: ^2.0.2
+  google_generative_ai: ^0.4.7
 
   flutter_localizations:
     sdk: flutter
